# eg

./: CMakeLists.txt  README.md  a.md  calc.cpp  eg.cpp  main.cpp  mul.cpp
.github/workflows/: build.yml
